--- a/main/templates/main/task_list.html
+++ b/main/templates/main/task_list.html
@@ -1,1 +1,14 @@
 <h1>My To Do List</h1>
+
+<table>
+    <tr>
+        <th>Item</th>
+    </tr>
+    {% for task in tasks %}
+    <tr>
+        <td>{{task.title}}</td>
+    </tr>
+    {% empty %}
+    <tr><h3>No tasks in list</h3>
+    {% endfor %}
+</table>
