--- a/main/templates/main/task_list.html
+++ b/main/templates/main/task_list.html
@@ -1,12 +1,15 @@
 <h1>My To Do List</h1>
+<a href="{% url 'task-create' %}">Add Task</a>
 
 <table>
     <tr>
         <th>Item</th>
+        <th></th>
     </tr>
     {% for task in tasks %}
     <tr>
         <td>{{task.title}}</td>
+        <td><a href="{% url 'task' task.id %}">View</a></td>
     </tr>
     {% empty %}
     <tr><h3>No tasks in list</h3>
